# gn10-can

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  README_ja.md  gn10-can-class.md  package.xml
.github/workflows/: test.yml
docs/: architecture.md  feat-branches-comparison.md  feat-branches-comparison_en.md  getting-started.md  gn10-can-class.md  servo-driver.md
docs/design/: 01_interface_injection.md  04_simple_forward_decl.md  05_modern_auto_register.md
drivers/stm32_can/: driver_stm32_can.cpp  driver_stm32_can.hpp
drivers/stm32_fdcan/: driver_stm32_fdcan.cpp  driver_stm32_fdcan.hpp
include/gn10_can/core/: can_bus.hpp  can_bus_base.hpp  can_bus_controller.hpp  can_device.hpp  can_device_base.hpp  can_frame.hpp  can_id.hpp  can_manager.hpp  fdcan_bus.hpp  fdcan_device.hpp  ican_receiver.hpp  ican_sender.hpp
include/gn10_can/devices/: esc_hub_client.hpp  esc_hub_config.hpp  esc_hub_server.hpp  motor_driver.hpp  motor_driver_client.hpp  motor_driver_server.hpp  motor_driver_types.hpp  power_manager_client.hpp  power_manager_server.hpp  power_manager_types.hpp  robot_control_hub_client.hpp  robot_control_hub_server.hpp  servo_driver_client.hpp  servo_driver_server.hpp  servo_moter_client.hpp  servo_moter_server.hpp  servo_motor_client.hpp  servo_motor_server.hpp  solenoid_driver.hpp  solenoid_driver_client.hpp  solenoid_driver_server.hpp
include/gn10_can/drivers/: can_driver_interface.hpp  driver_interface.hpp
include/gn10_can/utils/: can_converter.hpp
include/gn10_can_models/: can_device.hpp  motor_driver.hpp
include/gn10_can_models/core/: can_frame.hpp  can_id.hpp
prototype/: CMakeLists.txt
prototype/include/gn10_can_models/: can_frame.hpp  can_manager.hpp  ican_transceiver.hpp  servo_driver.hpp
prototype/src/: can_device.cpp  can_manager.cpp  servo_driver.cpp
prototype/tests/: test_main.cpp
src/: motor_driver.cpp
src/core/: can_bus.cpp  can_bus_controller.cpp  can_device.cpp  can_manager.cpp
src/devices/: esc_hub_client.cpp  esc_hub_server.cpp  motor_driver.cpp  motor_driver_client.cpp  motor_driver_server.cpp  motor_driver_types.cpp  power_manager_client.cpp  power_manager_server.cpp  servo_driver_client.cpp  servo_driver_server.cpp  servo_moter_client.cpp  servo_moter_server.cpp  servo_motor_client.cpp  servo_motor_server.cpp  solenoid_driver.cpp  solenoid_driver_client.cpp  solenoid_driver_server.cpp
tests/: CMakeLists.txt  mock_driver.hpp  test_can_bus.cpp  test_can_bus_controller.cpp  test_can_frame.cpp  test_can_manager.cpp  test_motor_driver.cpp
uml/: class.pu  class_simplified.pu  proposed_class.pu  redesign_fdcan_classic.pu
